Fix detail pages spacing and link function

--- a/src/pages/datasetDetailPage/datasetDetailPage.css
+++ b/src/pages/datasetDetailPage/datasetDetailPage.css
@@ -222,6 +222,10 @@ ul.breadcrumb li a:hover {
   overflow: auto;
 }
 
+.additionalDataExtraSpace {
+  margin-top: -10px;
+}
+
 .additionalDataContent {
   margin-top: 10px;
   color: black;
